[tool.poetry]
name = "leetcode-tests-generator"
version = "0.1.0"
description = ""
authors = ["Andrei Moiseenko <moiseenko.cy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
